Learned: Covered in Advance Selector

--- a/index.html
+++ b/index.html
@@ -27,6 +27,25 @@
         <p>Hey i am only one child </p>
     </div>
     <a href="http://google.com" id="google-link">Click me I am google</a>
+
+
+    <form>
+        <h1>Hello This is example for Advance selector</h1>
+        <button>+(Selector)</button>
+    </form>
+    <button>~(Selector)</button>
+
+   <ul class="childSelector">
+       <li>child 1</li>
+       <li> child 2</li>
+       <li>child 3</li>
+       <ol>
+        <li>
+            hey i am a order list-1
+        </li>
+    </ol>
+   </ul>
+    </div>
 </body>
 
 </html>
