Leared:Attribute selector

--- a/index.html
+++ b/index.html
@@ -46,6 +46,32 @@
     </ol>
    </ul>
     </div>
+    <span title="spanTitle">
+        Hello this is example of attribute selector
+    </span> <br>
+    <span title="spanTitle" alt="alter">
+        Hello this is example of attribute selector -2
+    </span><br>
+    <span title="spanTitle">
+        Hello this is example of attribute selector -3
+    </span><br>
+
+    <a href="http://google.com" target="_blank">attribute selector Link</a>
+    <a href="http://google.com">attribute selector Link</a>
+
+        
+    <p title="Country India">Hello this is example of attribute selector- p Tag-1</p>
+    <p title="Country sriLanga">Hello this is example of attribute selector- p Tag-2</p>
+    <p title="Countrypakistan">Hello this is example of attribute selector- p Tag-3</p>
+
+    <p title="content-India">Hello this is example of attribute selector- p Tag-1</p>
+    <p title="content-sriLanga">Hello this is example of attribute selector- p Tag-2</p>
+    <p title="contentpakistan">Hello this is example of attribute selector- p Tag-3</p>
+
+    <p title="anyword-India">Hello this is example of attribute selector- p Tag-1</p>
+    <p title="anyword-sriLanga">Hello this is example of attribute selector- p Tag-2</p>
+    <p title="anywordpakistan">Hello this is example of attribute selector- p Tag-3</p>
+    
 </body>
 
 </html>
